[package]
name = "text-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pom = "3.3.0"

[[bench]]
name = "bench_json"
harness = false
