[package]
name = "ezpc"
version = "0.1.0"
edition = "2021"
description = "EaZy Parser Combinator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.10.1"
pom = "3.3.0"

[[bench]]
name = "bench_json"
harness = false
